Current Version: @VERSION@

ctags-@VERSION@ (@DATE@)
* Added regex support when compiling with MinGW. Gnu regex module now included in all distributions.
* Added support for class and member variables [PHP, Bug #1037086]
* Fixed parsing of global scope qualifiers in base class lists. [C++, Bug #1799343].
* Fixed parsing of "else". [C#, Bug #1830344].
* Fixed bug with detecting identifiers inside variables. [Python, Bug  #1809024].
* Fixed bug with detecting identifiers at the start of variables. [Python, Bug #1856363].
* Fixed parsing of triple single-quoted multi-line strings. [Python, Bug #1906062].

ctags-5.7 (04 Sep 2007)
* Added support for DIM AS [Freebasic, Bug #1741778].
* Added support for arbitrary nesting depth [Python, Bug #1684786, Debian bug #409078].
* Added support for verbatim string literals [C#, Bug #1515910].
* Added support for .ctags as well as ctags.cnf on Windows [Bug #1246506].
* Added support for non-extern, non-static functions returning wchar_t, contributed by Aaron Peromsik [C++, Patch #1458930].
* Added support for numerous revision control systems including Bazaar and Mercurial [Bug #1472894].
* Added support for enums [Java, Bug #1730485, Bug #1517143, Patch #1027395, Patch #1528507].
* Added support for multiple-level namespace declarations [C#].
* Added .svn to list of directories ignored during recursion (--recurse).
* Added support for BlitzBasic, PureBasic and FreeBasic [FR #1100506].
* Added support for interfaces and static/public/protected/private functions [PHP].
* Added support for 'package' keyword [Perl].
* Added support for multi-line subroutine, package, and constant definitions [Perl].
* Added support for optional subroutine declarations [Perl].
* Added support for formats [Perl].
* Added support for new convert keyword [Eiffel].
* Added optional tags for forward variable declarations (e.g. 'struct C;') [C, C++].
* Changed parsing of option input file (-L) to strip trailing white space.